--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,40 @@
     padding: 0px;
 }
 
-.head {
+.PoloBook {
+    margin-left: 5px;
+}
+
+.header {
     background-color: rgb(100, 100, 245);
     color: white;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;  
     text-align: center;
     font-size: 60px;
+    width: 205vh;
 }
 
 .container {
-    background-color: rgba(128, 128, 128, 0.562);
-    width: 203vh;
-    height: 42vw;
+    background-color: rgba(240, 234, 234, 0.747);
+    width: 205vh;
+    height: 40vw;
+    display:grid;
+    grid-template-columns:50% 50%;
+    align-items: center; 
     text-align: center;
 }
 
+img {
+   border-radius: 100px;
+}
+
 label {
-    padding-top: 200px;
-    color:white;
+    padding-top: 20px;
+    margin-top: 20px;
+    color:black;
     font-size: 30px;
     align-items: center;
-    padding-left: 10px;
 }
 
 input {
@@ -33,14 +45,22 @@ input {
 }
 
 button {
-   font-size: 20px;
-   border-radius: 10px;
+   font-size: 12px;
+   border-radius: 100%;
    background-color:rgb(100, 100, 245);
    margin: 10px;
    padding: 10px;
 }
+
 .footer {
-    width: 100px;
-    height: 100px;
+   text-align: center;
+   font-style: italic;
+   color: rgba(255, 217, 0, 0.384);
+   background-color:rgb(100, 100, 245);
+   font-size: 20px;
+   border-bottom-left-radius: 8px;
+   border-bottom-right-radius: 8px;
+   width: 205vh;
+   height: 40px;
 }
 
