--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,44 @@
     margin-left: 5px;
 }
 
-.header {
+.head {
     background-color: rgb(100, 100, 245);
     color: white;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;  
     text-align: center;
-    font-size: 60px;
+    font-size: 30px;
     width: 205vh;
+    display: flex;
+    flex-direction: row;
+    color: #738c00;
+}
+
+.sign-in{
+    margin-left: 130vh;
+    margin-top: 10px;
+    border-radius: 15px;
+    text-align: center;
+    border-width: 4px;
+    border-color: black;
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: 100%;
+    background-color: white;
+}
+
+.log-in {
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 15px;
+    text-align: center;
+    border-width: 4px;
+    border-color: black;
+    background-color: white;
 }
 
 .container {
@@ -44,12 +74,13 @@ input {
     font-size: 20px;
 }
 
-button {
+.login1 {
    font-size: 12px;
-   border-radius: 100%;
+   border-radius: 50px;
    background-color:rgb(100, 100, 245);
    margin: 10px;
    padding: 10px;
+   font-size: 15px;
 }
 
 .footer {
