--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@
 }
 
 .sign-in{
+    border: none;
+    cursor: pointer;
     margin-left: 130vh;
     margin-top: 10px;
     border-radius: 15px;
@@ -35,6 +37,8 @@
 }
 
 .log-in {
+    border: none;
+    cursor: pointer;
     margin-left: 10px;
     margin-top: 10px;
     width: 100px;
@@ -70,17 +74,21 @@ label {
 }
 
 input {
+    padding: 5px 5px 5px 5px;
     border-radius: 6px;
     font-size: 20px;
 }
 
 .login1 {
+    border: none;
+    cursor: pointer;
    font-size: 12px;
    border-radius: 50px;
    background-color:rgb(100, 100, 245);
    margin: 10px;
-   padding: 10px;
-   font-size: 15px;
+   padding: 20px 25px 20px 25px;
+   font-size: 25px;
+   font-weight: bold;
 }
 
 .footer {
