--- a/styles.css
+++ b/styles.css
@@ -110,22 +110,31 @@ input {
     border-top-right-radius: 20px;
     width: 205vh;
     height: 85px;
-    text-align: center;
     align-items: center;
+    text-align: center;
     display: flex;
     flex-direction: row;
 }
 
 .main {
-    margin-left: 8px;
-    margin-right: 8px;
-    text-align: center;
-    width: 15px;
-    border: 10px solid white;
-    border-radius: 15px;
     display: flex;
     flex-direction: row;
+}
 
+.fa-wordpress {
+    margin-left: 10px;
+    background-color: white;
+    color: blue;
+    border: none;
+    border-radius: 100%;
+    font-family: monospace;
+    font-weight: bolder;
+    font-size: 10vh;
+    align-items: center;
+}
+
+.rtp {
+    align-items: center;
 }
 
 .lftop {
@@ -134,14 +143,41 @@ input {
 }
 
 input {
+    margin: 15px 10px 10px 20px;
+    align-items: center;
+    border: none;
     width: 600px;
+    height: 35px;
     border-radius: 30px;
 }
 
-.para {
-    margin-left: 100vh;
+.right-headding {
+    margin-left: 65vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: row;   
+}
+
+.name {
+    border: none;
+    border-radius: 10px;
+    font-weight: bolder;
+    padding: 10px 10px 10px 10px;
+    background-color: white;
+    color:blue;
+    font-weight: bolder;
+    font-size: 23px;
+    font-family: monospace;
+}
+
+.icons {
+    padding: 10px 10px 10px 10px;
+    background-color: white;
+    margin-left: 40px;
+    border: 1px solid white;
+    border-radius: 100px;
+    font-size: 22px;
+    align-items: center;
+    color: green;
 }
 
 .Middle {
