--- a/styles.css
+++ b/styles.css
@@ -181,13 +181,11 @@ input {
 }
 
 .Middle {
-    text-align: center;
     display: grid;
-    grid-template-columns:40% 60%;
+    grid-template-columns:30% 60%;
 }
 
 .Middleft {
-    
     background-color:  rgba(240, 234, 234, 0.747);
     border-bottom-left-radius: 20px;
 }
@@ -197,8 +195,7 @@ input {
     width: 350px;
     height: 350px;
     border-radius: 10px;
-    margin-left: 10px;
-    margin-top: 10xpx;
+    margin: 25px 10px 10px 40px;
 }
 
 .P1,.P2, .P3, .P4{
@@ -219,12 +216,12 @@ input {
 }
 
 .section {
-align-items: center;
-color: darkblue;
-border: 1px solid skyblue ;
-height: 20px;
-font-weight: bolder;
-font-size: 20px;
+    align-items: center;
+    color: darkblue;
+    border: 1px solid skyblue ;
+    height: 20px;
+    font-weight: bolder;
+    font-size: 20px;
 }
 .space1,.space2 {
     border: 1.5px solid black;
@@ -241,4 +238,25 @@ font-size: 20px;
     width: 70vh;
     margin-left: 70px;
     margin-top: 20px
+}
+
+.Salist {
+    list-style: none;
+    padding: 10px;
+    font-size: 30px;
+    text-align: left;
+    font-family: sans-serif;
+
+}
+.mhead {
+   background-color: blue;
+   color: white;
+   font-size: 40px;
+   font-weight: bolder;
+   font-style: Monospace;
+   align-items: center; 
+}
+
+.setting-list {
+    padding: 10px;
 }
