--- a/styles.css
+++ b/styles.css
@@ -121,16 +121,17 @@ input {
     flex-direction: row;
 }
 
-.fa-wordpress {
+.logo-design-button {
     margin-left: 10px;
-    background-color: white;
-    color: blue;
+    background-color: rgb(100, 100, 245);
+    color: gold;
     border: none;
-    border-radius: 100%;
-    font-family: monospace;
+    border-radius: 4px;
+    font-family: arial;
     font-weight: bolder;
     font-size: 10vh;
-    align-items: center;
+    padding: 4px;
+    cursor: pointer;
 }
 
 .rtp {
@@ -142,15 +143,21 @@ input {
     flex-direction: row;
 }
 
-input {
-    margin: 15px 10px 10px 20px;
+.Search-bar-button {
+    margin: 15px 10px 10px 30px;
     align-items: center;
     border: none;
-    width: 600px;
-    height: 35px;
     border-radius: 30px;
+    padding: 8px 300px 8px 10px;
+    cursor: pointer;
 }
 
+.fa-magnifying-glass-button{
+    border: none;
+    padding: 10px;
+    border-radius: 20px;
+    cursor: pointer;    
+}
 .right-headding {
     margin-left: 65vh;
     display: flex;
@@ -169,15 +176,31 @@ input {
     font-family: monospace;
 }
 
-.icons {
+.people-icon {
     padding: 10px 10px 10px 10px;
     background-color: white;
     margin-left: 40px;
-    border: 1px solid white;
     border-radius: 100px;
     font-size: 22px;
     align-items: center;
-    color: green;
+}
+
+.message-icon {
+    padding: 10px 10px 10px 10px;
+    background-color: white;
+    margin-left: 40px;
+    border-radius: 100px;
+    font-size: 22px;
+    align-items: center;
+}
+
+.earth-americas-icon {
+    padding: 10px 10px 10px 10px;
+    background-color: white;
+    margin-left: 40px;
+    border-radius: 100px;
+    font-size: 22px;
+    align-items: center;
 }
 
 .Middle {
@@ -188,22 +211,35 @@ input {
 .Middleft {
     background-color:  rgba(240, 234, 234, 0.747);
     border-bottom-left-radius: 20px;
+    align-items: start;
 }
 
-.space {
+/*.space {
     border: 1px solid black;
     width: 350px;
     height: 350px;
     border-radius: 10px;
     margin: 25px 10px 10px 40px;
 }
+*/
+
+.men-img {
+    width: 300px;
+    height: 250px;
+    background-color:white;
+    border-radius: 10px;
+    margin-left: 40px;
+    margin-top: 40px;
+    cursor: pointer; 
+}
 
 .P1,.P2, .P3, .P4{
-    margin: 35px 0 30px 100px;
+    margin: 35px 0px 30px 100px;
     background-color: rgb(100, 100, 245);
     border-radius: 12px;
-    width: 150px;
+    padding: 2px 3px 2px 3px;
     font-size: 30px;
+    text-align: left;
 }
 
 .Middright {
@@ -259,4 +295,12 @@ input {
 
 .setting-list {
     padding: 10px;
+}
+
+.footer {
+    color: rgb(243, 94, 94);
+    align-items: center;
+    font-family: arial;
+    text-align: center;
+    font-size: 30px;
 }
