--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ input {
 }
 
 .Middleft {
-    background-color:  rgba(240, 234, 234, 0.747);
+    background-color:  rgba(183, 219, 233, 0.589);
     border-bottom-left-radius: 20px;
     align-items: start;
 }
@@ -233,13 +233,51 @@ input {
     cursor: pointer; 
 }
 
-.P1,.P2, .P3, .P4{
-    margin: 35px 0px 30px 100px;
+.home-basics-button {
+    display: flex;
+    flex-direction: column; 
+}
+
+.home-button {
     background-color: rgb(100, 100, 245);
+    color: white;
+    border: none;
     border-radius: 12px;
-    padding: 2px 3px 2px 3px;
+    padding: 6px 8px 6px 8px;
     font-size: 30px;
-    text-align: left;
+    margin: 30px;
+    cursor: pointer;
+}
+.about-button{
+    background-color: rgb(100, 100, 245);
+    color: white;
+    border-radius: 12px;
+    border: none;
+    padding: 6px 8px 6px 8px;
+    font-size: 30px;
+    margin: 25px;
+    cursor: pointer;
+}
+.likes-button{
+    background-color: rgb(100, 100, 245);
+    color: white;
+    border-radius: 12px;
+    border: none;
+    padding: 6px 8px 6px 8px;;
+    font-size: 30px;
+    margin: 25px;
+    cursor: pointer;
+
+}
+.setting-button{
+    background-color: rgb(100, 100, 245);
+    color: white;
+    border-radius: 12px;
+    border: none;
+    padding: 6px 8px 6px 8px;
+    font-size: 30px;
+    margin: 25px;
+    cursor: pointer;
 }
 
 .Middright {
