--- a/styles.css
+++ b/styles.css
@@ -20,35 +20,40 @@
     color: #738c00;
 }
 
-.sign-in{
+.sign-in-button{
+    background-color: #fff;
+    color: rgb(100, 100, 245);
+    font-size: 15px;
+    font-family: Arial;
+    font-weight: bold;
+    padding-top: 2px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 2px;
+    margin-left: 600px;
+    margin-top: 15px;
+    margin-bottom: 15px;   
     border: none;
+    border-radius:25px;
     cursor: pointer;
-    margin-left: 130vh;
-    margin-top: 10px;
-    border-radius: 15px;
-    text-align: center;
-    border-width: 4px;
-    border-color: black;
-    width: 100px;
-    height: 50px;
-    font-size: 20px;
-    font-weight: 100%;
-    background-color: white;
 }
 
-.log-in {
+.log-in-button {
+    background-color: #fff;
+    color: rgb(100, 100, 245);
+    font-size: 15px;
+    font-family: Arial;
+    font-weight: bold;
+    padding-top: 2px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 2px;
+    margin-left: 50px;
+    margin-top: 15px;
+    margin-bottom: 15px;   
     border: none;
+    border-radius:25px;
     cursor: pointer;
-    margin-left: 10px;
-    margin-top: 10px;
-    width: 100px;
-    height: 50px;
-    font-size: 20px;
-    border-radius: 15px;
-    text-align: center;
-    border-width: 4px;
-    border-color: black;
-    background-color: white;
 }
 
 .container {
