--- a/styles.css
+++ b/styles.css
@@ -109,16 +109,15 @@ input {
 }
 
 /*/start from firstpage style.css*/
-.Top {
+.Top-firstpage {
     background-color: rgb(100, 100, 245);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    width: 205vh;
-    height: 85px;
     align-items: center;
     text-align: center;
     display: flex;
     flex-direction: row;
+    padding: 20px 20px 20px 20px;
 }
 
 .main {
@@ -164,7 +163,7 @@ input {
     cursor: pointer;    
 }
 .right-headding {
-    margin-left: 65vh;
+    margin-left: 5px;
     display: flex;
     flex-direction: row;   
 }
@@ -286,12 +285,15 @@ input {
 }
 
 .Middright {
-    display: grid;
-    grid-template-columns:70% 30% ;
+    display: flex;
+    flex-direction: row;
 }
 
 .midlt {
     background-color: skyblue;
+    text-align: center;
+    font-size: 20px;
+    align-items: center;
 }
 
 .section {
@@ -303,22 +305,24 @@ input {
     font-size: 20px;
 }
 .space1,.space2 {
-    border: 1.5px solid black;
-    border-radius: 10px;
+    border: none;
     height: 240px;
     width: 70vh;
     margin-left: 70px;
     margin-top: 20px;
 }
 .space3 {
-    border: 1.5px solid black;
-    border-radius: 10px;
+    border: none;
     height: 65px;
     width: 70vh;
     margin-left: 70px;
     margin-top: 20px
 }
 
+.middle-head-heading {
+    align-items: center;
+    text-align: center;
+}
 .Salist {
     list-style: none;
     padding: 10px;
@@ -328,16 +332,17 @@ input {
 
 }
 .mhead {
-   background-color: blue;
+   background-color: rgba(211, 211, 211, 0.726);
    color: white;
-   font-size: 40px;
-   font-weight: bolder;
+   font-size: 30px;
+   font-weight: bold;
    font-style: Monospace;
-   align-items: center; 
+
 }
 
 .setting-list {
-    padding: 10px;
+    padding: 15px;
+    text-align: center;
 }
 
 .footer {
